--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <title>Video Streaming Demonstration</title>
+    <title>RPi Robot</title>
   </head>
   <body>
-    <h1>Video Streaming Demonstration</h1>
+    <h3>Controls</h3>
+    <h3>Video Stream</h3>
     <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
