fix javascript code

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,7 @@
                 });
             } else {
                 if (direction[0] !== "still") {
+                    direction[0] = "still"
                     fetch("/move_robot", {
                         method: "POST", 
                         body: JSON.stringify({direction: "still"})
