--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
                     body: JSON.stringify(data)
                 });
             } else {
+                console.log(direction)
                 if (direction[0] !== "still") {
                     direction[0] = "still"
                     fetch("/move_robot", {
