--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,29 @@
                 }
             }
         }, 50);
+        var gamepads = {};
+
+        function gamepadHandler(event, connecting) {
+            var gamepad = event.gamepad;
+            // Note:
+            // gamepad === navigator.getGamepads()[gamepad.index]
+
+            if (connecting) {
+                gamepads[gamepad.index] = gamepad;
+            } else {
+                delete gamepads[gamepad.index];
+            }
+        }
+
+        window.addEventListener("gamepadconnected", function(e) {
+             gamepadHandler(e, true); 
+             var gp = navigator.getGamepads()[e.gamepad.index];
+            console.log("Gamepad connected at index %d: %s. %d buttons, %d axes.",
+                gp.index, gp.id,
+                gp.buttons.length, gp.axes.length
+            );
+        }, false);
+        window.addEventListener("gamepaddisconnected", function(e) { gamepadHandler(e, false); }, false);
     </script>
   </body>
 </html>
