--- a/templates/index.html
+++ b/templates/index.html
@@ -59,14 +59,18 @@
         }
 
         window.addEventListener("gamepadconnected", function(e) {
-             gamepadHandler(e, true); 
-             var gp = navigator.getGamepads()[e.gamepad.index];
+            gamepadHandler(e, true); 
+            var gp = navigator.getGamepads()[e.gamepad.index];
             console.log("Gamepad connected at index %d: %s. %d buttons, %d axes.",
                 gp.index, gp.id,
                 gp.buttons.length, gp.axes.length
             );
         }, false);
         window.addEventListener("gamepaddisconnected", function(e) { gamepadHandler(e, false); }, false);
+        setTimout(function() {
+            console.log(gamepads[0].axes[0], gamepads[0].axes[1])
+            console.log(gamepads[0].axes[0]*180, gamepads[0].axes[1]*180)
+        }, 50)
     </script>
   </body>
 </html>
