--- a/templates/index.html
+++ b/templates/index.html
@@ -44,29 +44,7 @@
                 }
             }
         }, 50);
-        var gamepads = {};
-
-        function gamepadHandler(event, connecting) {
-            var gamepad = event.gamepad;
-            // Note:
-            // gamepad === navigator.getGamepads()[gamepad.index]
-
-            if (connecting) {
-                gamepads[gamepad.index] = gamepad;
-            } else {
-                delete gamepads[gamepad.index];
-            }
-        }
-
-        window.addEventListener("gamepadconnected", function(e) {
-            gamepadHandler(e, true); 
-            var gp = navigator.getGamepads()[e.gamepad.index];
-            console.log("Gamepad connected at index %d: %s. %d buttons, %d axes.",
-                gp.index, gp.id,
-                gp.buttons.length, gp.axes.length
-            );
-        }, false);
-        window.addEventListener("gamepaddisconnected", function(e) { gamepadHandler(e, false); }, false);
+        
         setInterval(function() {
             document.getElementById("showDivX").innerHTML=joy.GetX(); 
             document.getElementById("showDivY").innerHTML=joy.GetY(); 
@@ -94,8 +72,11 @@
                     });
                 }
             }
-            console.log(gamepads[0].axes[0], gamepads[0].axes[1])
-            console.log(gamepads[0].axes[0]*180, gamepads[0].axes[1]*180)
+            if (navigator.getGamepads().length > 0) {
+                console.log(navigator.getGamepads().axes[0], gamepads[0].axes[1])
+                console.log(navigator.getGamepads().axes[0]*180, gamepads[0].axes[1]*180)
+            }
+            
         }, 50);
     </script>
   </body>
