--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                     });
                 }
             }
-            if (navigator.getGamepads().length > 0) {
+            if (navigator.getGamepads()[0] != null) {
                 console.log(navigator.getGamepads().axes[0], gamepads[0].axes[1])
                 console.log(navigator.getGamepads().axes[0]*180, gamepads[0].axes[1]*180)
             }
