fix 3rd javascript error

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,8 +73,8 @@
                 }
             }
             if (navigator.getGamepads()[0] != null) {
-                console.log(navigator.getGamepads()[0].axes[0], gamepads[0].axes[1])
-                console.log(navigator.getGamepads()[0].axes[0]*180, gamepads[0].axes[1]*180)
+                console.log(navigator.getGamepads()[0].axes[0], navigator.getGamepads()[0].axes[1])
+                console.log(navigator.getGamepads()[0].axes[0]*180, navigator.getGamepads()[0].axes[1]*180)
             }
             
         }, 50);
