remove excessive console.log

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,10 +73,9 @@
                 }
             }
             if (navigator.getGamepads()[0] != null) {
-                console.log(navigator.getGamepads()[0].axes[0], navigator.getGamepads()[0].axes[1])
-                console.log(navigator.getGamepads()[0].axes[0]*180, navigator.getGamepads()[0].axes[1]*180)
                 var x_axis = navigator.getGamepads()[0].axes[0]*180 ? (Math.abs(navigator.getGamepads()[0].axes[0]*180)>5): 0
                 var y_axis = navigator.getGamepads()[0].axes[1]*180 ? (Math.abs(navigator.getGamepads()[0].axes[1]*180)>5): 0
+                console.log(x_axis, y_axis)
                 if (x_axis !== 0 && y_axis !== 0) {
                     angle = Math.atan2(y_axis, x_axis)
                     fetch("/move_robot", {
