--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,15 @@
      <link rel="icon" type="image/png" href="/static/favicon.png"/>
   </head>
   <body>
-    <h2>Raspberry Pi Robot</h2>
+    <h2 style="text-align: center">Raspberry Pi Robot</h2>
     <div class="row">
-        <div class="col s4">
+        <div class="col s2">
             <h4>Controls</h4>
             <div id="joyDiv" style="width: 200px; height: 200px; margin-bottom: 20px;"></div>
         </div>
-        <div class="col s8">
+        <div class="col s10">
             <h4>Video Stream</h4>
-            <img src="{{ url_for('video_feed') }}">
+            <img style="width: 10vw; height: 10vw" src="{{ url_for('video_feed') }}">
         </div>
     </div>
     <script>
